--- a/assets/stylesheets/discourse-algolia-layout.scss
+++ b/assets/stylesheets/discourse-algolia-layout.scss
@@ -6,9 +6,14 @@
   }
   .right-container {
     width: $aa-dropdown-right-panel-width;
+    background-color: #000;
+    color: #000;
+    
   }
   .left-container {
     width: $aa-dropdown-left-panel-width;
+    background-color: #000;
+    color: #000;
   }
 }
 
