--- a/assets/stylesheets/discourse-algolia-layout.scss
+++ b/assets/stylesheets/discourse-algolia-layout.scss
@@ -5,7 +5,7 @@
     vertical-align: top;
   }
   .right-container {
-    width: 205px;
+    width: $aa-dropdown-right-panel-width;
   }
   .left-container {
     width: $aa-dropdown-left-panel-width;
